# ModProfiles

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/ISSUE_TEMPLATE/: 1-modpack-submission.yml  config.yml  modpack-submission.yml
.github/workflows/: multi-platform.yml
ExampleProfile/: ExampleProfile.modprofile  SoggyProfile.modprofile  profile.json  test.modprofile
ExampleProfile/mods/: km7dev.test.geode
src/: BetterFLAlert.cpp  BetterFLAlert.h  ExportModsLayer.cpp  ExportModsLayer.h  ModProfilesLayer.cpp  ModProfilesLayer.h  ModProfilesPopup.cpp  ModProfilesPopup.h  ModpackInfoPopup.cpp  ModpackInfoPopup.h  SettingsPopup.cpp  SettingsPopup.h  main.cpp
src/Backend/: Mods.cpp  Mods.hpp
src/UI/: ModCell.cpp  ModCell.hpp  ModProfilesLayer.cpp  ModProfilesLayer.hpp  ModProfilesPopup.cpp  ModProfilesPopup.hpp
src/UI/Lists/: ExportList.cpp  ExportList.hpp  ImportList.cpp  ImportList.hpp  PackList.cpp  PackList.hpp
src/UI/Utils/: MPListLayer.cpp  MPListLayer.hpp  MPListType.hpp
src/geode_impl/: GeodeTabSprite.cpp  GeodeTabSprite.h  SwelvyBG.cpp  SwelvyBG.h
src/hooks/: GeodeUI.cpp
src/lists/: ExportProfilesList.cpp  ExportProfilesList.h  ImportProfilesList.cpp  ImportProfilesList.h  ModCell.cpp  ModCell.h  ModProfilesList.h  PackCell.cpp  PackCell.h  PackIndexList.h  PackSelectList.cpp  PackSelectList.h
src/ui/: Cell.cpp  Cell.hpp  ModProfilesLayer.cpp  ModProfilesLayer.hpp  PackCreationPopup.cpp  PackCreationPopup.hpp  SwelvyBG.cpp  SwelvyBG.hpp
src/utils/: ModProfiles.cpp  ModProfiles.hpp  ModUtils.cpp  ModUtils.h  Mods.cpp  Mods.hpp  PackInfo.cpp  PackInfo.h  ziputils.cpp  ziputils.h
